infra/frontro/cluster/validatingadmissionpolicybinding-blazn-node-update-shadow.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  labels:
    app.kubernetes.io/part-of: blazn-hosting
  name: blazn-node-update-shadow
spec:
  policyName: blazn-node-update-shadow
  validationActions:
  - Warn
  - Audit
